Fix sidebar going out of bounds when hamburger opened

--- a/src/App.css
+++ b/src/App.css
@@ -157,7 +157,7 @@ a, p, h1, h2 {
     height: 100%;
     margin-left: 3%;
     position: fixed;
-    margin-top: 40em;
+    margin-top: 37em;
 }
 
 .sideBarItem {
